[package]
name = "pycisTopic"
version = "0.1.0"
edition = "2021"

[lib]
name = "pseudobulk"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = { version = "0.20.1", features = ["extension-module"] }
rust-htslib = "0.44.1"
# 0.1.27 fails with error[E0412]: cannot find type `RawFd` in `std::os::fd
jobserver = ">=0.1.25,<0.1.27"
itertools = "0.8.2"

