[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
    "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "pycisTopic"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Carmen Bravo", email = "carmen.bravogonzalezblas@kuleuven.be"},
    {name = "Seppe De Winter", email = "seppe.dewinter@kuleuven.be"},
    {name = "Gert Hulselmans", email = "gert.hulselmans@kuleuven.be"}
]
readme = "README.rst"

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "pycisTopic.pseudobulk"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                                  # but you can add a prefix to nest it inside of a Python package.
